time fixes, navbar spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,9 @@ textarea {
   border-top: 1px solid hsl(0, 0%, 80%);
   transition: bottom 0.3s;
 }
+.nav-icon {
+  width: 25%;
+}
 .nav-icon a {
   display: flex;
   flex-direction: column;
